--- a/Version2/src/Makefile
+++ b/Version2/src/Makefile
@@ -1,19 +1,19 @@
 GCC ?= g++
 
 # Gdal
-GDALDIR = /sw/geosoft/gdal-2.0.2-fgdb
-GDALLIB := -L$(GDALDIR)/lib -lgdal
-
+GDALLIB := -L/data/keeling/a/tingli3/gdal/lib -lgdal   #gdal-config --libs
+GDALFLAG := -I/data/keeling/a/tingli3/gdal/include	#gdal-config --cflag
 # Target rules
 all: LineDensity
 LineDensity.o: LineDensity.c
-	$(GCC) -o $@ -c $<
+        $(GCC) -o $@ -c $<
 density.o: density.c
-	$(GCC) -o $@ -c $<
+        $(GCC) -o $@ -c $<
 io.o: io.c
-	$(GCC) -I. -I$(GDALDIR)/include -o $@ -c $<
+        $(GCC) -I. $(GDALFLAG) -o $@ -c $<
 LineDensity: LineDensity.o io.o density.o
-	$(GCC) -o ../$@ $+ $(GDALLIB) 
-clean: 
-	rm -f *.o ../LineDensity
+        $(GCC) -o ../$@ $+ $(GDALLIB)
+clean:
+        rm -f *.o ../LineDensity
+
 
